# devkit

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  prek.toml
plugins/devkit/: .secrets.baseline  premises.json  pyproject.toml
plugins/devkit/.claude-plugin/: CLAUDE.md  hooks.json  marketplace.json  plugin.json
plugins/devkit/commands/: CLAUDE.md  codex-search.md  codex.md  dig.md  gpt-pro.md
plugins/devkit/scripts/: README.md  check-dig-migration.mjs  check-dig-routing.mjs  check-plugin-version-bump.mjs  check-skill-surface.mjs  check_dig_hooks.py  check_dig_migration.py  check_dig_routing.py  check_external_premises.py  check_legacy_migration.py  check_plugin_version_bump.py  check_skill_surface.py  check_utf8_bom.py  chrome_chatgpt_runner.py  devkit-codex-config.ps1  devkit-lib.ps1  devkit-lib.sh  devkit-runtime-sync.ps1  devkit-runtime-sync.sh  devkit-setup.ps1  devkit-skill-update.ps1  devkit_harness.py  devkit_hook_runner.cjs  repo_maintainer.py  setup-codex-dig.ps1  update-ccx.cmd  update-ccx.ps1  update-ccx.sh  update-devkit.cmd  update-devkit.ps1  update-devkit.sh
plugins/devkit/shared/: workflow.md
plugins/devkit/statusline/: install.js  statusline.js
plugins/devkit/tests/: conftest.py  test_backlog_skill.py  test_catch_up_skill.py  test_check_external_premises.py  test_check_legacy_migration.py  test_check_plugin_version_bump.py  test_check_skill_surface.py  test_check_utf8_bom.py  test_chrome_chatgpt_runner.py  test_codex_config_templates.py  test_codex_impl_skill.py  test_commit_push_skill.py  test_devkit_harness.py  (+26 more)
(+191 files in other folders)
