[project]
name = "devkit"
version = "0.1.0"
description = "Python harness for DevKit verification and workflow hooks"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "scripts/workflow", "tests"]
